--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     <div id="logo">URL Shortener</div>
     <div class="">
-        <form>
-            <mat-form-field appearance="outline">
-                <mat-label>Enter an URL to be shortened</mat-label>
-                <input name="enteredURL" [(ngModel)]="enteredURL" matInput>
-            </mat-form-field>
-            <button mat-fab aria-label="Shorten the URL" (click)="shortenurl()">
-                GO
-            </button>
+        <form [formGroup]="shortenForm">
+          <mat-form-field appearance="outline">
+            <mat-label>Enter an URL to be shortened</mat-label>
+            <input formControlName="enteredURL" matInput>
+          </mat-form-field>
+          <button mat-fab aria-label="Shorten the URL" (click)="shortenurl()">
+            GO
+          </button>
         </form>
     </div>
-    <div class="shorten_results" *ngIf="result">
+    <div class="shorten_results" *ngIf="result && result.new_url">
         <div class=""><span>{{result.org_url}}</span></div>
         <div class="">
             <a class="short-link" (click)="goToURL(result.new_url)">{{result.new_url}}</a>
